--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Search & Replace *SITE* with the name for the dev URL - I.E. 'atom' -> atom.eternityhosting.com -->
-    <!--base href="https://*SITE*.eternityhosting.com/"-->
-
-    <base href="http://127.0.0.1:3000/" >
-
-    <title>DESIGN #1</title>
+    <title>DESIGN #2</title>
 
     <!-- Font Scripts -->
     <script defer src="js/fonts.js" type="text/javascript"></script>
@@ -31,7 +26,7 @@
     <div class="header" role="banner">
         <div class="logo">
             <a href="#" class="event_track" data-cat="Header" data-label="Logo">
-                <img src="https://eternityatom.com/images/atom_logo.svg" title="Return Home" alt="[[++site_name]] Logo"/>
+                <img src="images/horse_logo.svg" title="Return Home" alt="Logo"/>
             </a>
         </div>
         <div class="search_wrap">
@@ -43,152 +38,175 @@
             </form>
         </div>
         <nav class="nav" aria-label="Site Menu">
-            <div class="item"><a href="#">Link #1</a></div>
-            <div class="item"><a href="#">Link #2</a></div>
-            <div class="item"><a href="#">Link #3</a></div>
-            <div class="item"><a href="#">Link #4</a></div>
-            <div class="item"><a href="#">Link #5</a></div>
+            <div class="item"><a href="#">Membership</a></div>
+            <div class="item"><a href="#">Magazine</a></div>
+            <div class="item"><a href="#">Ride</a></div>
+            <div class="item"><a href="#">About</a></div>
+            <div class="item"><a href="#">Contact</a></div>
+            <div class="item unique"><a href="#">Join</a></div>
         </nav>
     </div>
 </div>
 
+<div class="slideshow">
+
+    <div class="slide info_right">
+        <a href="#">
+            <img src="images/slide_1.jpg" alt="slide"/>
+        </a>
+    </div>fe
+
+</div>
+
 <div class="content">
 
-    <div class="slideshow">
-
-        <div class="slide">
-            <a href="#">
-                <img src="https://www.fillmurray.com/1200/400" alt="">
-                <div class="info">
-                    <div class="title">Clouds</div>
-                    <div class="subtext">Subtext</div>
-                    <div class="button">Button</div>
-                </div>
-            </a>
-        </div>
-
-        <div class="slide">
-            <a href="#">
-                <img src="https://www.placecage.com/1200/400" alt="">
-                <div class="info">
-                    <div class="title">Clouds</div>
-                    <div class="subtext">Subtext</div>
-                    <div class="button">Button</div>
-                </div>
-            </a>
-        </div>
-
-        <div class="slide">
-            <a href="#">
-                <img src="https://www.stevensegallery.com/1200/400" alt="">
-                <div class="info">
-                    <div class="title">Clouds</div>
-                    <div class="subtext">Subtext</div>
-                    <div class="button">Button</div>
-                </div>
-            </a>
-        </div>
-
+    <div class="intro_text">
+        <h1>The US Icelandic Horse Congress</h1>
+        <p>The United States Icelandic Horse Congress maintains the Registry of Icelandic Horses in the U.S, sponsors U.S. participation in international competitions, and regulates breeding and competition activities within the U.S. in accordance with FEIF rules.</p>
     </div>
 
     <div class="features">
-
         <div class="item">
             <a href="#">
                 <div class="image">
-                    <img src="https://www.fillmurray.com/400/300" alt="">
+                    <img src="images/h-1.jpg" alt="Feature Block"/>
                 </div>
                 <div class="bar">
-                    <div class="title">Feature #1</div>
-                    <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, neque!</div>
+                    <div class="title">Learn</div>
+                    <p class="description">The Icelandic Horse has a thousand year history.</p>
                 </div>
             </a>
         </div>
-
         <div class="item">
             <a href="#">
                 <div class="image">
-                    <img src="https://www.placecage.com/400/300" alt="">
+                    <img src="images/h-2.jpg" alt="Feature Block"/>
                 </div>
                 <div class="bar">
-                    <div class="title">Feature #2</div>
-                    <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, neque!</div>
+                    <div class="title">Train</div>
+                    <p class="description">Trainers and instructors certified in all participating FEIF member countries.</p>
                 </div>
             </a>
         </div>
-
         <div class="item">
             <a href="#">
                 <div class="image">
-                    <img src="https://www.stevensegallery.com/400/300" alt="">
+                    <img src="images/h-3.jpg" alt="Feature Block"/>
                 </div>
                 <div class="bar">
-                    <div class="title">Feature #3</div>
-                    <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, neque!</div>
+                    <div class="title">Youth</div>
+                    <p class="description">The Youth Committee promotes youth work in the United States.</p>
                 </div>
             </a>
         </div>
-
     </div>
 
-    <div class="intro_text">
-        <h1>DESIGN #1</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate doloremque beatae, fugiat, fuga possimus velit et dolorem. Esse reiciendis dolor corrupti. Optio non neque quas dolorum velit, sit vero esse ratione voluptate dignissimos eos nisi cumque cum hic ipsam consectetur eveniet reprehenderit. Enim perspiciatis, quasi ratione iste! Rerum, molestiae unde.</p>
+    <div class="banner">
+        <a href="#">
+            <div class="image">
+                <img src="images/h-4.jpg" alt="Feature Block"/>
+            </div>
+            <div class="bar">
+                <div class="title">Membership</div>
+                <p class="description">Join us and become a member of the official registry of Icelandic Horses in the U.S</p>
+            </div>
+        </a>
     </div>
 
-    <div class="post_list_widget">
-
-        <div class="item">
-            <div class="cover">
-                <a href="#" class="event_track" data-cat="Blog" data-label="[[*pagetitle]]">
-                    <img src="https://www.fillmurray.com/400/300" alt="">
-                </a>
-            </div>
-            <div class="info">
-                <div class="title"><a href="#">Blog Post #1</a></div>
-                <div class="post_meta">
-                    <div class="date"><i class="fal fa-calendar-alt" aria-hidden="true"></i>Jan 6, 2019</div>
+    <div class="updates">
+        <h2><i class="far fa-newspaper" aria-hidden="true"></i> Recent News</h2>
+        <div class="group">
+            <div class="blog">
+                <div class="item">
+                    <a href="#">
+                        <div class="image">
+                            <img src="images/h-5.jpg" alt="Feature Block"/>
+                        </div>
+                        <div class="bar">
+                            <div class="dates"><i class="far fa-calendar-alt" aria-hidden="true"></i> Sunday Dec 1, 2018</div>
+                            <h3 class="title">The Icelandic Horse Quarterly</h3>
+                            <p class="description">The Icelandic Horse Quarterly is published in March, June, September, and December by the US Icelandic Horse Congress as a benefit of membership.</p>
+                        </div>
+                    </a>
                 </div>
-                <div class="summary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quod cumque, placeat asperiores quasi? Esse, ipsam, atque? Sit, itaque, animi.</div>
+            </div>
+            <div class="blog">
+                <div class="item">
+                    <a href="#">
+                        <div class="image">
+                            <img src="images/h-6.jpg" alt="Feature Block"/>
+                        </div>
+                        <div class="bar">
+                            <div class="dates"><i class="far fa-calendar-alt" aria-hidden="true"></i> Tuesday Dec 18, 2018</div>
+                            <h3 class="title">BOD Conference Call</h3>
+                            <p class="description">USIHC members are welcome to audit the meeting. Instructions on how to access the call are included in the agenda.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="blog">
+                <div class="item">
+                    <a href="#" class="event_track" data-cat="Features" data-label="Feature">
+                        <div class="image">
+                            <img src="images/h-7.jpg" alt="Feature Block"/>
+                        </div>
+                        <div class="bar">
+                            <div class="dates"><i class="far fa-calendar-alt" aria-hidden="true"></i> Sunday Dec 31, 2018</div>
+                            <h3 class="title">Sea 2 Shining Sea Ride</h3>
+                            <p class="description">The Leisure Riding Committee is extremely pleased to announce the replacement for the retired Pleasure Riding Program! </p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
+    </div>
 
-        <div class="item">
-            <div class="cover">
-                <a href="#" class="event_track" data-cat="Blog" data-label="[[*pagetitle]]">
-                    <img src="https://www.placecage.com/400/300" alt="">
+    <div class="events">
+        <h2><i class="far fa-calendar-alt" aria-hidden="true"></i> Upcoming Events</h2>
+        <div class="group">
+            <div class="item">
+                <a href="#">
+                    <div class="image">
+                        <img src="images/h-7.jpg" alt="Feature Block"/>
+                    </div>
+                    <div class="bar">
+                        <div class="dates"><i class="far fa-calendar-alt" aria-hidden="true"></i> Sunday Dec 31, 2018</div>
+                        <h3 class="title">Last Day to Submit Spæri Award Entries</h3>
+                        <p class="description">The Spaeri Award will be given annually to a youth who clearly demonstrates commitment to and love for Icelandic horses.</p>
+                    </div>
                 </a>
             </div>
-            <div class="info">
-                <div class="title"><a href="#">Blog Post #2</a></div>
-                <div class="post_meta">
-                    <div class="date"><i class="fal fa-calendar-alt" aria-hidden="true"></i>Jan 3, 2019</div>
-                </div>
-                <div class="summary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quod cumque, placeat asperiores quasi? Esse, ipsam, atque? Sit, itaque, animi.</div>
-            </div>
-        </div>
-
-        <div class="item">
-            <div class="cover">
-                <a href="#" class="event_track" data-cat="Blog" data-label="[[*pagetitle]]">
-                    <img src="https://www.stevensegallery.com/400/300" alt="">
+            <div class="item">
+                <a href="#">
+                    <div class="image">
+                        <img src="images/h-6.jpg" alt="Feature Block"/>
+                    </div>
+                    <div class="bar">
+                        <div class="dates"><i class="far fa-calendar-alt" aria-hidden="true"></i> Thursday Jan 10, 2019</div>
+                        <h3 class="title">Stallion Reports Due</h3>
+                        <p class="description">Breeders must submit their stallion reports to the USIHC Registrar to enable the foals to be registered in the future.</p>
+                    </div>
                 </a>
             </div>
-            <div class="info">
-                <div class="title"><a href="#">Blog Post #3</a></div>
-                <div class="post_meta">
-                    <div class="date"><i class="fal fa-calendar-alt" aria-hidden="true"></i>Jan 1, 2019</div>
-                </div>
-                <div class="summary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quod cumque, placeat asperiores quasi? Esse, ipsam, atque? Sit, itaque, animi.</div>
+            <div class="item">
+                <a href="#">
+                    <div class="image">
+                        <img src="images/h-5.jpg" alt="Feature Block"/>
+                    </div>
+                    <div class="bar">
+                        <div class="dates"><i class="far fa-calendar-alt" aria-hidden="true"></i> Saturday Jan 19, 2019</div>
+                        <h3 class="title">USIHC Annual Meeting Boston MA</h3>
+                        <p class="description">USIHC Annual Meeting In Boston MA Hosted By The NEIHC.</p>
+                    </div>
+                </a>
             </div>
         </div>
-
     </div>
 
     <div class="instagram_widget">
-        <h2 class="heading">Instagram Feed</h2>
-        <script src="https://apps.elfsight.com/p/platform.js" defer async></script>
-        <div class="elfsight-app-2e580992-8c92-4eca-a1cb-5d82031ec9cb"></div>
+        <h2 class="heading"><i class="fab fa-instagram" aria-hidden="true"></i> Find us on Instagram</h2>
+        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+        <div class="elfsight-app-ed84fc37-9f4d-4363-b60c-bc86d23bfa0e"></div>
     </div>
 
 </div>
@@ -203,9 +221,9 @@
             <a href="#" target="_blank" title="Follow us on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
             <a href="#" target="_blank" title="Follow us on YouTube"><i class="fab fa-youtube"></i></a>
         </div>
-        <div class="address">182 Main Street | Burlington, Vermont 05401</div>
-        <div class="contact"><a href="tel:000-000-0000" aria-label="Call (000) 000-0000" class="event_track" data-cat="Footer" data-label="Phone">(000) 000-0000</a> | <a href="mailto:info@eternitymarketing.com" class="event_track" data-cat="Footer" data-label="Email">info@eternitymarketing.com</a></div>
-        <div class="copyright" role="contentinfo">&copy; 2019 *SITE* | All Rights Reserved</div>
+        <div class="address">300 South Sawyer Road | Oconomowoc, WI 53066</div>
+        <div class="contact"><a href="tel:866-929-0009" aria-label="Call 866-929-0009" class="event_track" data-cat="Footer" data-label="Phone">866-929-0009</a> | <a href="mailto:info@icelandics.org" class="event_track" data-cat="Footer" data-label="Email">info@icelandics.org</a></div>
+        <div class="copyright" role="contentinfo">&copy; 2019 Icelandic Horse Congress | All Rights Reserved</div>
         <div class="ewd"><a href="https://eternitywebdev.com/" target="_blank" class="event_track" data-cat="Footer" data-label="Eternity Link"><img src="https://eternityatom.com/images/website_by_eternity.svg" alt="Website By Eternity"></a></div>
     </div>
 </div>
